public/css/main_styles.css
/*Please put main colors here for UI */
:root {
  --header_footer_color: #333;
  --header_footer_contrast: white;
  --main_contrast_color: #2B6ABC;
}

body {
  margin-left: 2%;
  margin-right: 2%;
  margin-top: 70px;
}


/*
    LEADERBOARD FORMATTING
    Credit to https://www.w3schools.com/
*/
#leaderboard {
  font-family: Arial, Helvetica, sans-serif;
  border-collapse: collapse;
  width: 100%;
}

#leaderboard td,
#leaderboard th {
  border: 1px solid #ddd;
  padding: 8px;
}

#leaderboard tr:nth-child(even) {
  background-color: #f2f2f2;
}

#leaderboard tr:hover {
  background-color: #ddd;
}

#leaderboard th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: left;
  background-color: var(--main_contrast_color);
  color: white;
}

footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 50px;
  margin: auto;
  /* Height of the footer */
  background: var(--header_footer_color);
  text-align: center;
  font-size: 16px;
  text-decoration: none;
}


/*
    MISC FORMATTING
    Credit to us
*/
.foot {
  color: white;
}

.attribution {
  color: white;
}

.error {
  color: #D8000C;

}

